--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".ui.activity.BaseActivity"/>
         <activity android:name=".ui.activity.AddPlanDetailActivity"/>
+        <service android:name=".ui.service.RecordService"/>
     </application>
 
 </manifest>
