--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
             storePassword '123456'
         }
     }
-    compileSdkVersion 24
-    buildToolsVersion "25.0.0"
+    compileSdkVersion 26
+    buildToolsVersion "27.0.0"
     defaultConfig {
         applicationId "com.github.tinkerti.ziwu"
         minSdkVersion 16
@@ -36,9 +36,11 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:recyclerview-v7:25.2.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
+
+
+    compile 'com.android.support:recyclerview-v7:27.0.2'
+    compile 'com.android.support:support-v4:26.0.0'
+    
     testCompile 'junit:junit:4.12'
     compile 'com.facebook.stetho:stetho:1.4.2'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
