--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.github.tinkerti.ziwu">
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -11,7 +12,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.MainActivity"
+        <activity
+            android:name=".ui.activity.MainActivity"
             android:launchMode="singleTop"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
@@ -19,10 +21,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.BaseActivity"/>
-        <activity android:name=".ui.activity.AddTaskActivity"/>
-        <service android:name=".ui.service.RecordService"/>
-        <activity android:name=".ui.activity.ModifyRecordDetailActivity"/>
+        <activity android:name=".ui.activity.BaseActivity" />
+        <activity android:name=".ui.activity.AddTaskActivity" />
+
+        <service android:name=".ui.service.RecordService" />
+
+        <activity android:name=".ui.activity.ModifyRecordDetailActivity" />
+        <activity android:name=".ui.activity.RecordChartActivity" />
     </application>
 
 </manifest>
