--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,13 +37,13 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-
     compile 'com.android.support:recyclerview-v7:27.0.2'
     compile 'com.android.support:support-v4:26.0.0'
     compile 'com.android.support:appcompat-v7:27.0.2'
 
-
     testCompile 'junit:junit:4.12'
     compile 'com.facebook.stetho:stetho:1.4.2'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+
+    compile 'org.greenrobot:eventbus:3.1.1'
 }
