-e 问题: search task UI 原因: 解决方案: Reviewer: 工单号: X Log: X

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
 
         <activity android:name=".ui.activity.ModifyRecordDetailActivity" />
         <activity android:name=".ui.activity.RecordChartActivity" />
+        <activity android:name=".ui.activity.SearchActivity" />
     </application>
 
 </manifest>
